# postprocessing_and_gaze

./: .gitignore  .gitmodules  aggregate_experiment_data.csv  filters.py  kromo.py  license  main.py  paper.typ  performance_metrics.csv  presentation.typ  pyproject.toml  readme.md  requirements.txt
docs/: paper.bib  paper.typ  pnas_pnas112_15767.bib
scripts/: deepgaze_iie.py  evaluation.py  filters.py  gaze_distribution_example.py  heuristics.py  main.py  performance.py  plots.py  to_png.py  utilities.py
src/: filter.py  main.py  saliency.py
src/filters/: gaussian_noise.py
